--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
     <footer>
         <div class="container">
-            <div class="footer-text">&copy; 2023 WOLE. Tecnologia de Garagem.</div>
+            <div class="footer-text">&copy; 2026 WOLE. Tecnologia de Garagem.</div>
         </div>
     </footer>
 </div>
@@ -656,7 +656,7 @@
             
             <div class="info-row" style="border:none;">
                 <span class="info-label">Social</span>
-                <a href="https://www.instagram.com/kboom.br/" target="_blank" class="info-value" style="text-decoration: none;">@kboom.br</a>
+                <a href="https://www.instagram.com/wole.br/" target="_blank" class="info-value" style="text-decoration: none;">@kboom.br</a>
             </div>
         </div>
     </section>
